--- a/charts/cnpg-cluster/templates/cluster.yaml
+++ b/charts/cnpg-cluster/templates/cluster.yaml
@@ -11,7 +11,7 @@ spec:
     name: {{ .Values.superuserSecret.name }}
   {{- end }}
   storage:
-    size: 1Gi
+    size: {{ .Values.storage.size }}
   postgresql:
     parameters:
       timezone: "Europe/Berlin"
