--- a/charts/cnpg-cluster/templates/cluster.yaml
+++ b/charts/cnpg-cluster/templates/cluster.yaml
@@ -15,6 +15,7 @@ spec:
   postgresql:
     parameters:
       timezone: "Europe/Berlin"
+      wal_keep_size: "128MB"
     shared_preload_libraries:
       - "vchord.so"
   {{- if .Values.databases }}
