--- a/charts/code-server/values.yaml
+++ b/charts/code-server/values.yaml
@@ -1,4 +1,7 @@
 code-server:
+  image:
+    repository: ghcr.io/egvimo/code-server
+    tag: "4.107.0"
   serviceAccount:
     create: false
   ingress:
