--- a/charts/n8n/values.yaml
+++ b/charts/n8n/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/egvimo/n8n-custom
+  repository: n8nio/n8n
   pullPolicy: IfNotPresent
   tag: ""  # Defaults to chart appVersion
 
