feat(longhorn): add chart

--- a/ci/ct-install-config.yaml
+++ b/ci/ct-install-config.yaml
@@ -2,6 +2,7 @@ debug: true
 chart-repos:
   - argo=https://argoproj.github.io/argo-helm
   - cnpg=https://cloudnative-pg.github.io/charts/
+  - longhorn=https://charts.longhorn.io
 excluded-charts:
   - common
   - jdownloader
