--- a/ci/ct-lint-config.yaml
+++ b/ci/ct-lint-config.yaml
@@ -3,4 +3,5 @@ all: true
 chart-repos:
   - argo=https://argoproj.github.io/argo-helm
   - cnpg=https://cloudnative-pg.github.io/charts/
+  - longhorn=https://charts.longhorn.io
 validate-maintainers: false
