--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           helm repo add argo https://argoproj.github.io/argo-helm
           helm repo add cnpg https://cloudnative-pg.github.io/charts/
+          helm repo add longhorn https://charts.longhorn.io
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.7.0
