--- a/charts/n8n/Chart.yaml
+++ b/charts/n8n/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: n8n
 type: application
 version: 0.1.24
-# renovate: image=n8nio/n8n
-appVersion: "2.1.2"
+# renovate: image=ghcr.io/egvimo/n8n
+appVersion: "2.1.3"
 dependencies:
   - name: common
     version: 0.1.0
