feat(cnpg): allow database extensions

--- a/charts/cnpg-cluster/ci/default-values.yaml
+++ b/charts/cnpg-cluster/ci/default-values.yaml
@@ -1,4 +1,10 @@
+superuserSecret:
+  name: superuser
+
 databases:
   - database: test
     owner: test
     passwordSecretName: test
+    extensions:
+      - vchord
+      - earthdistance
