--- a/charts/home-assistant/values.yaml
+++ b/charts/home-assistant/values.yaml
@@ -26,8 +26,7 @@ service:
 
 ingress:
   enabled: true
-  annotations:
-    kubernetes.io/ingress.class: traefik
+  ingressClassName: traefik
   hosts:
     - host: home-assistant.192-168-178-31.sslip.io
       paths:
