feat(authelia): add chart

--- a/ci/ct-install-config.yaml
+++ b/ci/ct-install-config.yaml
@@ -1,6 +1,7 @@
 debug: true
 chart-repos:
   - argo=https://argoproj.github.io/argo-helm
+  - authelia=https://charts.authelia.com
   - cnpg=https://cloudnative-pg.github.io/charts/
   - longhorn=https://charts.longhorn.io
 excluded-charts:
