--- a/ci/ct-lint-config.yaml
+++ b/ci/ct-lint-config.yaml
@@ -5,4 +5,5 @@ chart-repos:
   - authelia=https://charts.authelia.com
   - cnpg=https://cloudnative-pg.github.io/charts/
   - longhorn=https://charts.longhorn.io
+  - temporal=https://go.temporal.io/helm-charts/
 validate-maintainers: false
