--- a/charts/cnpg-cluster/templates/tests/test-database.yaml
+++ b/charts/cnpg-cluster/templates/tests/test-database.yaml
@@ -41,5 +41,10 @@ spec:
             - -v
             - ON_ERROR_STOP=1
             - -c
-            - SELECT 1
+            - |
+              SELECT d.datname as "Name", pg_catalog.pg_get_userbyid(datdba) as "Owner"
+              FROM pg_catalog.pg_database d
+              WHERE d.datname = current_database();
+              CREATE TABLE IF NOT EXISTS helm_test(id int);
+              DROP TABLE helm_test;
 {{- end }}
